# abusive-clauses-dashboard

./: .gitignore  Dockerfile  Notebook.ipynb  README.md  app.py  main.py  pyproject.toml  requirements.txt
clarin_datasets/: abusive_clauses_dataset.py  aspectemo_dataset.py  cst_wikinews_dataset.py  dataset_to_show.py  kpwr_ner_datasets.py  nkjp_pos_dataset.py  polemo_dataset.py  punctuation_restoration_dataset.py  utils.py
data/: test.csv  train.csv  validation.csv
notebooks/: Untitled.ipynb  aspectemo_exploration.ipynb  kpwr_ner.ipynb  polemo2_diffrent_options.ipynb  punctuationrestoration.ipynb  umap_plotting.ipynb
views/: dataset_overview.py  dataset_overview_view.py
