[tool.poetry]
name = "abusive-clauses-dashboard"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
streamlit = "^1.11.0"
gradio = "^3.0.26"
transformers = "^4.20.1"
datasets = "^2.3.2"
black = "^22.6.0"
pyperclip = "^1.8.2"
plotly = "^5.9.0"
Unidecode = "^1.3.4"
scipy = "^1.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
